2016-08-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodetic/__init__.py:

	Added functions to convert between cartesian and geodetic coordinates.

	* typhon/geodetic/tests/test_geodetic.py:

	Test the conversion between geodetic and cartesian coordiantes (there and
	back) for all available ellipsoid models.

	Test for cartesian/geocentric conversion are merged into one test case
	each using arrays.

2016-08-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/__init__.py:

	Import module sensor and add it to namespace.

	Added two functions to interact and manipulate GriddedField4 storing
	atm_fields_compact.

	* typhon/arts/sensor.py: Renamed functions to be more pythonic.

2016-08-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodetic/__init__.py, typhon/physics/__init__.py:

	Removed constants from __all__ definition in both sub-packages.

2016-08-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/thermodynamics.py:

	Currently containing functions related to water vapor and its thermodynamic
	effects.

	* typhon/__init__.py: Import constants and thermodynamics.

	* typhon/physics/constants.py, typhon/geodetic/constants.py,
	typhon/constants.py:

	Combined all constant definitions in top level module.

	* typhon/datasets/_tovs_defs.py, typhon/physics/__init__.py,
	typhon/physics/em.py, typhon/geodetic/__init__.py:

	Fixed import of top level constants module.

	* doc/constants.rst, doc/geodetic.rst, doc/modules.rst, doc/physics.rst,
	doc/thermodynamics.rst:

	Updated the module list and adapted the move of the constants module.

2016-08-11  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodetic/__init__.py:

	Added functions to convert between cartesian and spherical coordinates.

	* typhon/geodetic/tests: Unittests for geodetic functions.

	* typhon/geodetic/tests/test_geodetic.py:

	Test the conversion between cartesian and spherical coordinates for three
	fixed points. Additionally convert coordinates back and forth.
