@@ -2,6 +2,17 @@
 
 	* typhon/geodetic/__init__.py:
 
+	Added functions to convert between geocentric and geodetic coordinates.
+
+	* typhon/geodetic/tests/test_geodetic.py:
+
+	Test the conversion between geodetic and geocentric coordiantes (there and
+	back) for all available ellipsoid models.
+
+2016-08-16  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/geodetic/__init__.py:
+
 	Added functions to convert between cartesian and geodetic coordinates.
 
 	* typhon/geodetic/tests/test_geodetic.py:
